AI-3.3.2 <ygorlima@Ygors-MacBook-Pro.local Update Kotlin.xml	Delete androidEditors.xml

--- a/templates/Kotlin.xml
+++ b/templates/Kotlin.xml
@@ -38,4 +38,30 @@
       <option name="KOTLIN_TOPLEVEL" value="true" />
     </context>
   </template>
+  <template name="test" value="@Test&#10;fun $NAME$() {&#10;    $END$&#10;}" description="Add a test function" toReformat="false" toShortenFQNames="true">
+    <variable name="NAME" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="KOTLIN_CLASS" value="true" />
+      <option name="KOTLIN_EXPRESSION" value="true" />
+    </context>
+  </template>
+  <template name="mock" value="@Mock&#10;private lateinit var mock$PROPERTY$: $TYPE$" description="Create property with @Mock of Mockito Annotation" toReformat="false" toShortenFQNames="true">
+    <variable name="PROPERTY" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="TYPE" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="KOTLIN_CLASS" value="true" />
+      <option name="KOTLIN_EXPRESSION" value="true" />
+    </context>
+  </template>
+  <template name="stub" value="private fun stub$TARGET$$METHODNAME$($PARAM$: $PARAMTYPE$) {&#10;    whenever(mock$TARGET$.$METHOD$())&#10;        .thenReturn($PARAM$)&#10;}" description="Create a stub function" toReformat="false" toShortenFQNames="true">
+    <variable name="TARGET" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="PARAM" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="PARAMTYPE" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="METHOD" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="METHODNAME" expression="capitalize(METHOD)" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="KOTLIN_CLASS" value="true" />
+      <option name="KOTLIN_EXPRESSION" value="true" />
+    </context>
+  </template>
 </templateSet>
