--- a/templates/Kotlin.xml
+++ b/templates/Kotlin.xml
@@ -65,7 +65,7 @@
       <option name="KOTLIN_EXPRESSION" value="true" />
     </context>
   </template>
-  <template name="utest" value="@Test&#10;fun `$NAME$`() {&#10;    $END$&#10;}" description="Add a unit test function" toReformat="false" toShortenFQNames="true">
+  <template name="utest" value="@Test&#10;fun `$NAME$`() {&#10;    // given&#10;    $END$&#10;    &#10;    // when&#10;    &#10;    // then&#10;}" description="Add a unit test function" toReformat="false" toShortenFQNames="true">
     <variable name="NAME" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="KOTLIN_CLASS" value="true" />
